k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80, "HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: 'true'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:653389884231:certificate/b5dbc6c1-b053-40f3-a492-238e47cfce1f
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
    - host: www.kaushikops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
